--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <title><b>Funtales</b></title>
   </head>
   <body>
-    <p>Hi This is Dinesh Developing this site for fun.</p><br>
+    <p>Hi This is Me Developing this site for fun.</p><br>
     <table cellspacing=10>
       <tr>
         <td>A1 criminal child rapist</td>
-        <td>Nibba no 1</td>
-        <td>A good guy</td>
+        <!-- <td>Nibba no 1</td>
+        <td>A good guy</td> -->
       </tr>
-      <tr>
+      <!-- <tr>
         <td> <a href="https://www.instagram.com/m_a_q_s_o_o_d_22/">Click here to find more</a></td>
         <td> <a href="https://www.instagram.com/naveen_reddy_1230/">Click here to find more</a></td>
         <td> <a href="https://www.instagram.com/_dinesh_bhumireddy/">Click here to find more</a></td>
-      </tr>
+      </tr> -->
     </table>
-    <img src="maksudh.jpeg" height="170" width="170">
-    <img src="naveen.jpeg"   height="170" width="150">
-    <img src="dinesh.jpg" height="170" width="170">
+    <img src="sujen.jpg" height="170" width="170">
+    <!-- <img src="naveen.jpeg"   height="170" width="150">
+    <img src="dinesh.jpg" height="170" width="170"> -->
   </body>
 </html>
